@@ -1,2 +1,0 @@
-#!/bin/sh
-(cd noweb; make fun)
