@@ -4,37 +4,32 @@ library(survival)
 
 #
 # Test the coxph program on the Ovarian data
-#
-
-attach(ovarian)
-
-summary(survfit(Surv(futime, fustat)~1), censor=TRUE)
+summary(survfit(Surv(futime, fustat)~1, data=ovarian), censor=TRUE)
 
 # Various models
-coxph(Surv(futime, fustat)~ age)
-coxph(Surv(futime, fustat)~ resid.ds)
-coxph(Surv(futime, fustat)~ rx)
-coxph(Surv(futime, fustat)~ ecog.ps)
+coxph(Surv(futime, fustat)~ age, data=ovarian)
+coxph(Surv(futime, fustat)~ resid.ds, data=ovarian)
+coxph(Surv(futime, fustat)~ rx, data=ovarian)
+coxph(Surv(futime, fustat)~ ecog.ps, data=ovarian)
 
-coxph(Surv(futime, fustat)~ resid.ds + rx + ecog.ps)
-coxph(Surv(futime, fustat)~ age + rx + ecog.ps)
-coxph(Surv(futime, fustat)~ age + resid.ds + ecog.ps)
-coxph(Surv(futime, fustat)~ age + resid.ds + rx)
+coxph(Surv(futime, fustat)~ resid.ds + rx + ecog.ps, data=ovarian)
+coxph(Surv(futime, fustat)~ age + rx + ecog.ps, data=ovarian)
+coxph(Surv(futime, fustat)~ age + resid.ds + ecog.ps, data=ovarian)
+coxph(Surv(futime, fustat)~ age + resid.ds + rx, data=ovarian)
 
 # Residuals
-fit <- coxph(Surv(futime, fustat)~ age + resid.ds + rx + ecog.ps )
+fit <- coxph(Surv(futime, fustat)~ age + resid.ds + rx + ecog.ps, data=ovarian)
 resid(fit)
 resid(fit, 'dev')
 resid(fit, 'scor')
 resid(fit, 'scho')
 
-fit <- coxph(Surv(futime, fustat) ~ age + ecog.ps + strata(rx))
+fit <- coxph(Surv(futime, fustat) ~ age + ecog.ps + strata(rx), data=ovarian)
 summary(fit)
 summary(survfit(fit))
 sfit <- survfit(fit, list(age=c(30,70), ecog.ps=c(2,3)))  #two columns
 sfit
 summary(sfit)
-detach()
 
 
 # Check of offset + surv, added 7/2000
